최종 수정본 (test 코드 작성 및, 상품 페이징 추가)